--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,1 +1,6 @@
 $gray-light: #e6e6e6;
+$green-lighter: #aab8ab;
+$green-light: #8fb996;
+$green-medium: #709775;
+$green-dark: #415d43;
+$green-darker: #111d13;
