--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,6 +1,6 @@
-$gray-light: #e6e6e6;
-$green-lighter: #aab8ab;
-$green-light: #8fb996;
-$green-medium: #709775;
+$gray-light: #e0e0e0;
+$green-lighter: #c4d4c5;
+$green-light: #aab8ab;
+$green-medium: #919c91;
 $green-dark: #415d43;
 $green-darker: #111d13;
