--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,5 +1,5 @@
 $gray-light: #e0e0e0;
-$green-white: #dce9dd;
+$green-white: hsl(123, 25%, 85%);
 $green-lighter: #c4d4c5;
 $green-light: #aab8ab;
 $green-medium: #919c91;
