--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -1,16 +1,18 @@
+@import "@/assets/styles/variables";
+
 @mixin shadow-flat {
-  background-color: $green-lighter;
-  box-shadow: 5px 8px 14px -5px $green-dark;
+  background-color: $green-base;
+  box-shadow: 5px 8px 14px -5px $green-dark, inset 0px 6px 40px $green-highlight;
 }
 
 @mixin shadow-pressed {
-  background-color: $green-lighter;
-  box-shadow: inset 5px 5px 25px $green-medium,
-    inset -26px -26px 80px $green-white;
+  background-color: $green-base;
+  box-shadow: inset 2px 2px 15px $green-shadows,
+    inset -36px -36px 100px 40px $green-highlight;
 }
 
 @mixin shadow-pressed-soft {
-  background-color: $green-lighter;
-  box-shadow: inset 6px 6px 10px -5px $green-medium,
-    inset -10px -10px 23px -4px $green-white;
+  background-color: $green-base;
+  box-shadow: inset 6px 6px 10px -5px $green-shadows,
+    inset -10px -10px 53px -4px $green-highlight;
 }
