--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,7 +1,7 @@
 $gray-light: #e0e0e0;
-$green-white: hsl(123, 25%, 85%);
-$green-lighter: #c4d4c5;
+$green-highlight: #cfe2d0;
+$green-base: #c4d4c5;
 $green-light: #aab8ab;
-$green-medium: #919c91;
+$green-shadows: #919c91;
 $green-dark: #415d43;
 $green-darker: #111d13;
