Fixed format, added continue game modal

--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -13,3 +13,13 @@ input:-webkit-autofill:active {
 input:focus {
   outline: none;
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+input[type="number"] {
+  -moz-appearance: textfield;
+}
