Added select component

--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -10,7 +10,7 @@ input:-webkit-autofill:active {
     inset -10px -10px 53px -4px $green-highlight;
 }
 
-input:focus {
+*:focus {
   outline: none;
 }
 
