--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -5,6 +5,11 @@
   box-shadow: 5px 8px 14px -5px $green-dark, inset 0px 6px 40px $green-highlight;
 }
 
+@mixin shadow-flat-soft {
+  background-color: $green-base;
+  box-shadow: 4px 8px 8px -7px $green-dark, inset 0px 6px 40px $green-highlight;
+}
+
 @mixin shadow-pressed {
   background-color: $green-base;
   box-shadow: inset 2px 2px 15px $green-shadows,
