--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,7 +1,7 @@
-$gray-light: #e0e0e0;
-$green-highlight: #cfe2d0;
-$green-base: #c4d4c5;
-$green-light: #aab8ab;
-$green-shadows: #919c91;
-$green-dark: #415d43;
-$green-darker: #111d13;
+$alabaster: #f7f6f3;
+$honeydew: #cae2d3;
+$middle-green: #4f9263;
+$hunter-green: #325d42;
+$erie-black: #131515;
+$erie-black-light: #b4bbbb;
+$scarlet: #f42c04;
