--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,7 +1,4 @@
-$alabaster: #f7f6f3;
-$honeydew: #cae2d3;
-$middle-green: #4f9263;
-$hunter-green: #325d42;
 $erie-black: #131515;
+$pine-tree: #233329;
 $erie-black-light: #b4bbbb;
-$scarlet: #f42c04;
+$alabaster: #f7f6f3;
