--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,4 +1,4 @@
-$erie-black: #131515;
-$pine-tree: #233329;
-$erie-black-light: #b4bbbb;
-$alabaster: #f7f6f3;
+$dark: #131515;
+$contrast: #233329;
+$shadow: #b4bbbb;
+$base: #f7f6f3;
