--- a/src/assets/styles/_transitions.scss
+++ b/src/assets/styles/_transitions.scss
@@ -23,3 +23,18 @@
 .show-leave-active {
   transition: opacity 0.5s ease-in-out;
 }
+
+.slide-enter-active,
+.slide-leave-active {
+  transition: transform 0.5s ease;
+}
+.slide-enter-from {
+  transform: translateX(100%);
+}
+.slide-enter-to,
+.slide-leave-from {
+  transform: translateX(0%);
+}
+.slide-leave-to {
+  transform: translateX(-100%);
+}
