--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -19,6 +19,24 @@ input[type="number"]::-webkit-outer-spin-button {
   -moz-appearance: none;
   appearance: none;
 }
+
 input[type="number"] {
-  -moz-appearance: textfield;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: textfield;
+}
+
+.cs__close-button {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  cursor: pointer;
+  text-align: center;
+  background: white;
+  border: black 2px solid;
+  border-radius: 50%;
+  font-size: 14px;
+  font-weight: bold;
+  width: 25px;
+  height: 25px;
 }
