Update styles and variables

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -2,3 +2,10 @@ $dark: #131515;
 $contrast: #233329;
 $shadow: #b4bbbb;
 $base: #f7f6f3;
+$main200: #c2d8c6;
+$main300: #99bca1;
+$main400: #6d9a7a;
+$main500: #477455;
+$main600: #396246;
+$main700: #2d4f39;
+$main950: #111d16;
